--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -128,6 +128,9 @@ android {
 dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
+    compile(project(":react-native-cognito-identity")){
+        exclude group: "com.google.android.gms" // in case we add google libs in the future
+    }
     compile "com.facebook.react:react-native:+"  // From node_modules
 }
 
