--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-native": "0.39.2",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "react-native-cognito-identity": "^0.0.1"
   },
   "devDependencies": {
     "babel-jest": "17.0.2",
