--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ReactNativeCognitoDemo",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -8,11 +8,11 @@
   },
   "dependencies": {
     "react": "15.4.1",
-    "react-native": "0.39.2",
+    "react-native": "^0.40.0",
+    "react-native-cognito-identity": "^0.1.0",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0",
-    "react-native-cognito-identity": "^0.0.1"
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-jest": "17.0.2",
